...
                            .environmentObject(locationsManager) // 傳遞共享的數據模型
           
            // AccountView 獲取共享的 LocationsManager
            AccountView()
                .tabItem {
                    Image(systemName: "person.fill")
                    Text("Account")
                }
                .tag(4)
                .environmentObject(locationsManager) // 傳遞共享的數據模型
        }
    }
}
...
